--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,6 @@ commands = flake8 {posargs}
 [flake8]
 #show-source = True
 max-line-length = 120
-exclude = .tox,.venv,build,dist,doc,migrations,urls.py,settings.py,settings_prod.py,settings_test.py
+exclude = .tox,.venv,build,dist,doc,migrations,urls.py,urls_contents.py,settings.py,settings_prod.py,settings_test.py
 # Ignore N802 (functions in lowercase) because the setUp() function in tests
 ignore = N802
